fixes some layout issues

--- a/public/css/main.less
+++ b/public/css/main.less
@@ -13,7 +13,7 @@
 @total-width: 100%;
 
 html{
-font-family: 'DroidSansRegular', sans-serif;
+	font-family: 'DroidSansRegular', sans-serif;
 }
 
 /* ============================== */
@@ -74,7 +74,7 @@ font-family: 'DroidSansRegular', sans-serif;
 	#nav-top a {
 		text-transform: uppercase;	
 		margin-right: 20px;
-    	font-weight: bold;
+    	font-family: 'DroidSansBold', sans-serif;
 	}
 	
 	#nav-top li {
@@ -117,9 +117,13 @@ font-family: 'DroidSansRegular', sans-serif;
 		margin-top: 15px;
 	}
 	
+	span.image-description-company {
+		font-family: 'DroidSansBold', sans-serif;
+	}
+	
 	#introtext {
     	font-size: 38px;
-    	font-weight: bold;
+		font-family: 'DroidSansBold', sans-serif;
     	line-height: 45px;
     	margin-top: 50px;
     	text-align: justify;
@@ -146,11 +150,13 @@ font-family: 'DroidSansRegular', sans-serif;
 	/* ============================= */
 	
 	span.job-title {
-		font-weight:bold;	
+		font-family: 'DroidSansBold', sans-serif;	
 	}
 	
 	p.job-description {
-		margin-bottom: 8px;
+		margin-bottom: 1em;
+		margin-top: 0;
+		margin-left: 1.5em;
 	}
 	
 	/* ============================= */
@@ -163,9 +169,9 @@ font-family: 'DroidSansRegular', sans-serif;
 	}
 	
  	div.orbit-wrapper div.slider-nav span {
-		height: 70px;
-		width: 60px;
-			
+		height: 46px;
+		width: 40px;
+        margin-top: -23px;		
 	}
 	
 	div.orbit-wrapper div.slider-nav span.left {
