--- a/public/fonts/droid-sans/stylesheet.css
+++ b/public/fonts/droid-sans/stylesheet.css
@@ -7,7 +7,7 @@
          url('DroidSans-webfont.svg#DroidSansRegular') format('svg');
     font-weight: normal;
     font-style: normal;
-
+    font-variant: normal;	
 }
 
 @font-face {
